<resources>
    <string name="app_name">HelloExperts</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Sign out</string>
    <string name="menu_home">Home</string>
    <string name="menu_new_questions">Newly posted questions</string>
    <string name="menu_recent_activity">Recent Activity</string>
    <string name="menu_all_questions">Questions</string>
    <string name="menu_all_answers">My Answers</string>
    <string name="menu_expert_faq">Expert FAQ\'s</string>
    <string name="menu_complaints">Contact Us</string>
    <string name="menu_expert_answering_guideline">Expert Answering Guideline</string>
    <string name="menu_expert_suspension_policies">Expert Suspension Policies</string>
    <string name="menu_add_withdraw_payment_source">Add Withdraw Payment Source</string>
    <string name="menu_my_withdraw_payment_source">My Withdraw Payment Source</string>
    <string name="menu_withdraw_pending_earning">Withdraw Pending Earning</string>
    <string name="menu_my_withdraw_history">My Withdraw History</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="skip_question_note">This question will be no longer available to you after skipping.</string>
    <string name="skip_question_header">You are about to Skip this Question</string>
    <string name="skip_question_select_text">Please select any one reason for skipping this question:</string>
    <string name="error_select_option_skip">At least select one of them:</string>
    <string name="question_no_available_header">Question No longer Available</string>
    <string name="question_no_available_text_line_one">The time to answer this question has been lapsed.</string>
    <string name="question_no_available_text_line_two">Now you cannot answer this question.</string>
    <string name="skip_question_timeout_text_line_one">The time to skip this question has been lapsed.</string>
    <string name="skip_question_timeout_text_line_two">If you choose to skip this question now, you will face an account suspension.</string>
    <string name="final_answer_preview_header">Final Answer Preview</string>
    <string name="terms_and_condition_question_header">You are about to lock this question</string>
    <string name="terms_and_condition_question_header_note">By pressing the Answer Now button you acknowledge that you have read and understood the following terms and conditions:</string>
    <string name="error_select_terms">
        You have to check all terms to answer this question.
    </string>
    <string name="terms_condition_1">
        I understand that maximum time allocated to answer this question is 4 hours.
    </string>
    <string name="terms_condition_2">I understand that the question is complete in all respects and I have the expertise to provide a<strong>quality answer</strong> to this question.


    </string>
    <string name="terms_condition_3">I understand that <strong>plagiarized answers</strong> will be rejected and my account will be terminated.

    </string>
    <string name="terms_condition_4">I understand that my answer should ideally be written in text form and I should add <strong>quality images</strong> where necessary to support my answer.

    </string>
    <string name="terms_condition_5">I understand that failure to comply with the above stated terms may result in <strong>account suspension.</strong>
    </string>
    <string name="about_yourself_api_url">https://www.helloexperts.com/index.php?main_page=expert_post_requests</string>
    <string name="expert_images_url">https://www.helloexperts.com/images/expert_prof_images/</string>
    <string name="question_1">1. How much will I earn for answering questions?</string>
    <string name="answer_1">You will earn a fix price (depending upon difficulty level of question) for each answer accepted. The amount you have earned will be shown in your local currency.</string>
    <string name="question_2">2. When can I withdraw my earnings?</string>
    <string name="answer_2">The system will automatically withdraw your earnings once a week if the earnings are more than the minimum threshold set.</string>
    <string name="question_3">3. What are the payment methods that I can use to withdraw my earnings?</string>
    <string name="answer_3">You can withdraw your money through PayPal or Wire transfer.</string>
    <string name="question_4">4. Are there any transaction fees to withdraw my earnings?</string>
    <string name="answer_4">No. There are no transaction procession fee or transfer fees to withdraw your earnings.</string>
    <string name="question_5">5. How can I apply to become an expert on HelloExperts.com?</string>
    <string name="answer_5">You can become an expert on HelloExperts.com by signing up and filling an expert application form.</string>
    <string name="question_6">6. When will I become an expert and be able to answer questions?</string>
    <string name="answer_6">If your application is considered further, your probation will start during which you will be able to answer questions. You will become an expert as soon as your 5 answers are accepted.</string>
    <string name="question_7">7. When do I start earning money?</string>
    <string name="answer_7">You can start earning as soon as your 5 answers are accepted. The answers during your probation will not be considered for earning purposes.</string>
    <string name="question_8">8. How do I know when a new question is posted?</string>
    <string name="answer_8">You will receive an email for every new question posted. You can access questions from your email and also from your expert account.</string>
    <string name="question_9">9. Where can I find the questions to answer?</string>
    <string name="answer_9">You can click the questions button on your dashboard to access all the posted questions. To answer a question you have to click the question and then click on the lock and answer button.</string>
    <string name="question_10">10. How many questions can I lock to answer at a time?</string>
    <string name="answer_10">You will be able to lock one question at a time. When you have locked a question you cannot answer any other question until you answer the locked question first.</string>
    <string name="question_11">11. What is the maximum time allowed to answer a question?</string>
    <string name="answer_11">You have to answer a question within 4 hours after you lock a question. After that, the question will no longer visible to you and you will not be able to answer that question.</string>
    <string name="question_12">12. When will my answer be accepted?</string>
    <string name="answer_12">When you submit an answer it will be under review by quality assurance teams. Some of your answers might get rejected if certain quality checks are not met. You will not be paid for answers that were rejected.</string>
    <string name="question_13">13. What are the requirements for an answer to get accepted?</string>
    <string name="answer_13">Your answer will be accepted if it is detailed, well explained and has no plagiarism. Moreover, your answer should be completed as per the requirements and correct in all respects.</string>
    <string name="question_14">14. Why my expert account is restricted?</string>
    <string name="answer_14">If your 5 answers are rejected your expert account will be restricted for 10 days. You will not be able to answer the questions while your account is restricted</string>
    <string name="question_15">15. When an account restriction is applied?</string>
    <string name="answer_15">Your account might face restriction due to the following reasons:
        \n
        \u2022 Operating multiple accounts \n
        \u2022 Plagiarized answers \n
        \u2022 Copying material or answers \n
        \u2022 Multiple answers rejected \n
        \u2022 Using promotional material \n
        \u2022 Spamming \n
        \u2022 Other reasons \n
    </string>
    <string name="question_16">16. How can I avoid account restriction?</string>
    <string name="answer_16">The goal of this code is to make HelloExperts.com communication system as safe and professional as possible. It is important, as an Expert that you know and follows your obligations, while using the HelloExperts.com platform, so that you can succeed and thrive on the platform.</string>
    <string name="answer_guideline_first_paragraph">Hello Experts, our team is very happy to welcome you as a candidate to become a Subject Expert for our answering portal! Being an Expert on HelloExperts.com will give you the ability to work directly with our student users, who will post questions that are giving them trouble. Students post questions every single day and you will be able to help them by providing detailed answers with clear and step-by-step explanations. Our team is committed to ensuring all students receive the best quality answers with help from Subject Experts like you. Our In-house team reviews the quality of your answers, ensuring that they are relevant, well-explained and easy to understand for students.</string>
    <string name="our_code_of_honor_paragraph">HelloExperts has a strict code of honor which instills the best practices possible in our Experts. We ensure that students receive quality help from experts and that the help is free from academic misconduct of any kind. If a student posts a question that is an assignment or an online exam, the experts are advised to strictly adhere to this code of integrity and avoid getting involved in any form of academic dishonesty.</string>
    <string name="basic_answering_guide_paragraph">Experts can see posted questions on their expert dashboards. The questions may have different prices based on the varying question type. The expert can see and select the question they wish to complete and then view the requirements. After carefully reviewing the requirements of a question, the expert can either leave the question or lock the question to post an answer to it. When a question is locked by an expert, that question cannot be seen by other experts any longer.</string>
    <string name="answer_writing_style_first">Once you have selected and locked a question, you can answer the question in one of three styles.</string>
    <string name="answer_writing_style_first_heading">1. Typed Answers:</string>
    <string name="answer_writing_style_first_heading_detail">Typed answers are always preferred. Experts should always go for a typed answer which is well-formatted, unless for some reason a question’s answer can be better explained with handwritten sketches or diagrams.</string>
    <string name="answer_writing_style_second_heading">2. Hand-written Answers:</string>
    <string name="answer_writing_style_second_heading_detail">Experts are allowed to produce an answer on a paper with a legible handwriting and then take a clear picture of the answer and then upload it in the answer space provided. Remember, blurred images or images with illegible contents will not be accepted as answers.</string>
    <string name="answer_writing_style_third_heading">3. Typed Answers with supporting images:</string>
    <string name="answer_writing_style_third_heading_detail">Experts are encouraged to use this style when the question requires an explanation with additional graphs or process flow diagrams. Even if a question does not necessarily require additional images to explain experts are still encouraged to use this style for better understanding from the students.</string>
    <string name="menu_locked_question">Locked Question</string>
</resources>