<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Recent_activity">



    <fragment
        android:id="@+id/nav_new_questions"
        android:name="com.HelloExperts.HelloExpert.ui.newlyposted.NewlyPostedFragment"
        android:label="@string/menu_new_questions"
        tools:layout="@layout/fragment_newly_posted" />

    <fragment
        android:id="@+id/nav_Recent_activity"
        android:name="com.HelloExperts.HelloExpert.ui.recentactivity.RecentActivityFragment"
        android:label="@string/menu_recent_activity"
        tools:layout="@layout/fragment_recent_activity" />

    <fragment
        android:id="@+id/nav_all_questions"
        android:name="com.HelloExperts.HelloExpert.ui.questions.AllQuestionsFragment"
        android:label="@string/menu_all_questions"
        tools:layout="@layout/fragment_all_questions" />

    <fragment
        android:id="@+id/nav_all_answers"
      android:name="com.HelloExperts.HelloExpert.ui.answers.AllAnswersFragment"
        android:label="@string/menu_all_answers"
        tools:layout="@layout/fragment_all_answers" />

    <fragment
        android:id="@+id/nav_suspension_policy"

        android:label="@string/menu_expert_suspension_policies"
        android:name="com.HelloExperts.HelloExpert.ui.suspensionpolicy.SuspensionPolicyFragment"

        tools:layout="@layout/fragment_suspension_policy" />
    <fragment
        android:id="@+id/nav_expert_faq"
        android:name="com.HelloExperts.HelloExpert.ui.expertfaq.ExpertFaqFragment"
        android:label="@string/menu_expert_faq"
        tools:layout="@layout/fragment_expert_faq" />
    <fragment
        android:id="@+id/nav_expert_answering_guideline"
        android:name="com.HelloExperts.HelloExpert.ui.answeringguideline.expertfaq.AnsweringGuidelineFragment"
        android:label="@string/menu_expert_answering_guideline"
        tools:layout="@layout/fragment_answering_guidelines" />

    <fragment
        android:id="@+id/nav_alerts_setting"
        android:name="com.HelloExperts.HelloExpert.ui.alertSetting.alertSettings.AlertSettingsFragment"
        android:label="Notification Settings"
        tools:layout="@layout/fragment_alert_settings" />
</navigation>